iai-callgrind/tests/ui/test_library_benchmark_invalid_bench_arguments.stderr
error: Expected 0 arguments but found 1

         = help: This argument is expected to have the same amount of parameters as the benchmark function

 --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:5:13
  |
5 | #[bench::id(42)]
  |             ^^

error: Expected 0 arguments but found 1

         = help: This argument is expected to have the same amount of parameters as the benchmark function

 --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:6:18
  |
6 | #[benches::multi(42)]
  |                  ^^

error: Expected 1 arguments but found 0

         = help: This argument is expected to have the same amount of parameters as the benchmark function

  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:10:1
   |
10 | #[library_benchmark]
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `library_benchmark` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Expected 1 arguments but found 0

         = help: This argument is expected to have the same amount of parameters as the benchmark function

  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:14:1
   |
14 | #[library_benchmark]
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `library_benchmark` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Expected 1 arguments but found 2

         = help: This argument is expected to have the same amount of parameters as the benchmark function

  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:20:13
   |
20 | #[bench::id(42, 8)]
   |             ^^

error: Expected 1 arguments but found 2

         = help: This argument is expected to have the same amount of parameters as the benchmark function

  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:24:18
   |
24 | #[benches::multi((42, 8))]
   |                  ^^^^^^^

error[E0603]: function `bench5` is private
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:52:13
   |
52 |     bench5::bench5();
   |             ^^^^^^ private function
   |
note: the function `bench5` is defined here
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:39:1
   |
39 | fn bench5(my: u8) -> String {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0603]: function `bench6` is private
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:54:13
   |
54 |     bench6::bench6();
   |             ^^^^^^ private function
   |
note: the function `bench6` is defined here
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:44:5
   |
44 | pub fn bench6() {}
   |     ^^^^^^^^^^^

error[E0603]: function `bench7` is private
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:56:13
   |
56 |     bench7::bench7();
   |             ^^^^^^ private function
   |
note: the function `bench7` is defined here
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:48:5
   |
48 | pub fn bench7() {}
   |     ^^^^^^^^^^^

error[E0308]: mismatched types
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:29:13
   |
29 | #[bench::id("hello")]
   |             ^^^^^^^
   |             |
   |             expected `u8`, found `&str`
   |             arguments to this function are incorrect
   |
note: function defined here
  --> $RUST/core/src/hint.rs
   |
   | pub const fn black_box<T>(dummy: T) -> T {
   |              ^^^^^^^^^

error[E0308]: mismatched types
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:33:18
   |
33 | #[benches::multi("hello")]
   |                  ^^^^^^^
   |                  |
   |                  expected `u8`, found `&str`
   |                  arguments to this function are incorrect
   |
note: function defined here
  --> $RUST/core/src/hint.rs
   |
   | pub const fn black_box<T>(dummy: T) -> T {
   |              ^^^^^^^^^

error[E0308]: mismatched types
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:40:5
   |
39 | fn bench5(my: u8) -> String {
   |                      ------ expected `String` because of return type
40 |     my
   |     ^^- help: try using a conversion method: `.to_string()`
   |     |
   |     expected struct `String`, found `u8`

error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:52:5
   |
52 |     bench5::bench5();
   |     ^^^^^^^^^^^^^^-- an argument of type `u8` is missing
   |
note: function defined here
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:39:4
   |
39 | fn bench5(my: u8) -> String {
   |    ^^^^^^ ------
help: provide the argument
   |
52 |     bench5::bench5(/* u8 */);
   |                   ~~~~~~~~~~
